[package]
name = "proxer-cli"
version = "0.3.4"
edition = "2021"
authors = ["doroved"]
description = "Proxy TCP traffic on macOS with domain filtering."
readme = "README.md"
repository = "https://github.com/doroved/proxer-cli"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "spoof", "spoofdpi", "macos", "macos-proxy"]
categories = ["network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.2", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1.42.0", features = ["full"] }
tokio-native-tls = "0.3.1"

wildmatch = "2.4.0"
clap = { version = "4.5.23", features = ["derive"] }
sha2 = "0.10.8"
base64 = "0.22.1"
bytes = "1.9.0"

http = "1.2.0"
http-body-util = "0.1.2"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
json5 = "0.4.1"
rlimit = "0.10.2"


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size s = 1.4 mb | z = 1.2 mb
strip = true      # Remove debug symbols
